src/generated/medicationsParser.js
// Generated from medications.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import medicationsListener from './medicationsListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class medicationsParser extends antlr4.Parser {

    static grammarFileName = "medications.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, "'then'", "'when'", "'#'", null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, "'abd'", 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'once'", "'twice'", null, "'ac'", "'pc'", "'hs'", 
                            "'wc'", null, "'po'", null, "'buccal'", null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, "'epidural'", 
                            "'in'", null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, "'nostril'", 
                            "'left nostril'", "'right nostril'", null, "'left arm'", 
                            "'right arm'", "'l_arm'", "'r_arm'", "'thigh'", 
                            null, null, "'chest'", "'back'", "'scalp'", 
                            "'mouth'", "'cheek'", "'joint'", "'spine'", 
                            "'vagina'", "'rectum'", "'deltoid muscle'" ];
    static symbolicNames = [ null, "TSP", "TBSP", "G", "L", "KG", "MG", 
                             "MCG", "ML", "U_PER_ML", "MG_PER_G", "MG_PER_ML", 
                             "MCG_PER_ML", "MEQ", "DROP", "TAB", "CAP", 
                             "PUFF", "SPRAY", "PATCH", "SACHET", "VIAL", 
                             "SUPPOSITORY", "LOZENGE", "STRIP", "AMPULE", 
                             "INJECTION", "UNIT", "INTERNATIONAL_UNIT", 
                             "PERCENT_CONCENTRATION", "MO", "DAY", "WEEK", 
                             "YEAR", "M", "WORD", "X_DURATION", "FOR_DURATION", 
                             "SIMPLE_DURATION", "UNTIL_FINISHED", "CONTINUOUSLY", 
                             "LIFELONG", "THEN", "WHEN", "HASH", "NUMBER", 
                             "BEFORE_MEALS", "AFTER_MEALS", "AT_BEDTIME", 
                             "WITH_MEALS", "ON_EMPTY_STOMACH", "OS", "OD", 
                             "OU", "AS", "AD", "AU", "UNDER_TONGUE_SITE", 
                             "BU", "IVP", "IVPB", "PICC", "CVC", "VG", "DG", 
                             "VL", "B", "UN", "ABD", "UE", "LE", "ANT", 
                             "POST", "LAT", "MED", "DEL", "SCJ", "QXH", 
                             "FREQUENCY_PER_DAY", "FREQUENCY_PER_WEEK", 
                             "FREQUENCY_PER_MONTH", "FREQUENCY_PER_YEAR", 
                             "FREQUENCY_PER_HOUR", "FREQUENCY_PER_MINUTE", 
                             "UD", "QD", "BID", "TID", "QID", "QOD", "QAM", 
                             "QMO", "QPM", "QHS", "QMN", "TIW", "BIW", "QW", 
                             "QMW", "STAT", "PRN", "ONCE", "TWICE", "THRICE", 
                             "AC", "PC", "HS", "WC", "ORAL", "PO", "SL", 
                             "BUCCAL", "RECTAL", "VAGINAL", "TOPICAL", "TRANSDERMAL", 
                             "OPHTHALMIC", "OTIC", "NASAL", "INHALATION", 
                             "IV", "IM", "SC", "ID", "IA", "IT", "IP", "INTRATHECAL_FULL", 
                             "IN", "NEB", "QS", "DISP", "NR", "NPO", "OTC", 
                             "QMON", "QTUE", "QWED", "QTHURS", "QFRI", "QSAT", 
                             "QSUN", "NOSTRIL", "LEFT_NOSTRIL", "RIGHT_NOSTRIL", 
                             "NARES", "LEFT_ARM", "RIGHT_ARM", "L_ARM", 
                             "R_ARM", "THIGH", "GLUTEAL", "ABDOMEN", "CHEST", 
                             "BACK", "SCALP", "MOUTH", "CHEEK", "JOINT", 
                             "SPINE_AREA", "VAGINA", "RECTUM", "DELTOID", 
                             "VASTUS_LATERALIS", "WS" ];
    static ruleNames = [ "prescription", "instruction", "dosage", "frequency", 
                         "timing", "duration", "route", "site", "conditionText", 
                         "noteText" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = medicationsParser.ruleNames;
        this.literalNames = medicationsParser.literalNames;
        this.symbolicNames = medicationsParser.symbolicNames;
    }



	prescription() {
	    let localctx = new PrescriptionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, medicationsParser.RULE_prescription);
	    var _la = 0;
	    try {
	        this.state = 47;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 20;
	            this.instruction();
	            this.state = 25;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===42) {
	                this.state = 21;
	                this.match(medicationsParser.THEN);
	                this.state = 22;
	                this.instruction();
	                this.state = 27;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 30;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===43) {
	                this.state = 28;
	                this.match(medicationsParser.WHEN);
	                this.state = 29;
	                this.conditionText();
	            }

	            this.state = 34;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===44) {
	                this.state = 32;
	                this.match(medicationsParser.HASH);
	                this.state = 33;
	                this.noteText();
	            }

	            this.state = 36;
	            this.match(medicationsParser.EOF);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 38;
	            this.route();
	            this.state = 39;
	            this.match(medicationsParser.EOF);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 41;
	            this.site();
	            this.state = 42;
	            this.match(medicationsParser.EOF);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 44;
	            this.timing();
	            this.state = 45;
	            this.match(medicationsParser.EOF);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, medicationsParser.RULE_instruction);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 45:
	            this.state = 49;
	            this.dosage();
	            break;
	        case 77:
	        case 78:
	        case 79:
	        case 80:
	        case 81:
	        case 82:
	        case 83:
	        case 84:
	        case 85:
	        case 86:
	        case 87:
	        case 88:
	        case 89:
	        case 90:
	        case 91:
	        case 92:
	        case 93:
	        case 94:
	        case 95:
	        case 96:
	        case 97:
	        case 98:
	        case 99:
	        case 100:
	        case 101:
	        case 102:
	        case 103:
	            this.state = 50;
	            this.frequency();
	            break;
	        case 46:
	        case 47:
	        case 48:
	        case 49:
	        case 50:
	        case 104:
	        case 105:
	        case 106:
	        case 107:
	            this.state = 51;
	            this.timing();
	            break;
	        case 36:
	        case 37:
	        case 38:
	        case 39:
	        case 40:
	        case 41:
	            this.state = 52;
	            this.duration();
	            break;
	        case 108:
	        case 109:
	        case 110:
	        case 111:
	        case 112:
	        case 113:
	        case 114:
	        case 115:
	        case 116:
	        case 117:
	        case 118:
	        case 119:
	        case 120:
	        case 121:
	        case 122:
	        case 123:
	        case 124:
	        case 125:
	        case 126:
	        case 127:
	        case 128:
	        case 129:
	        case 130:
	        case 131:
	        case 132:
	        case 133:
	        case 134:
	        case 135:
	        case 136:
	        case 137:
	        case 138:
	        case 139:
	        case 140:
	        case 141:
	            this.state = 53;
	            this.route();
	            break;
	        case 51:
	        case 52:
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	        case 62:
	        case 63:
	        case 64:
	        case 65:
	        case 66:
	        case 67:
	        case 68:
	        case 69:
	        case 70:
	        case 71:
	        case 73:
	        case 74:
	        case 75:
	        case 76:
	        case 142:
	        case 143:
	        case 144:
	        case 145:
	        case 146:
	        case 147:
	        case 148:
	        case 149:
	        case 150:
	        case 151:
	        case 152:
	        case 153:
	        case 154:
	        case 155:
	        case 156:
	        case 157:
	        case 158:
	        case 159:
	        case 160:
	        case 161:
	        case 162:
	        case 163:
	            this.state = 54;
	            this.site();
	            break;
	        case 35:
	            this.state = 55;
	            this.match(medicationsParser.WORD);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 4294966399) !== 0) || ((((_la - 67)) & ~0x1f) === 0 && ((1 << (_la - 67)) & 4294967263) !== 0) || ((((_la - 99)) & ~0x1f) === 0 && ((1 << (_la - 99)) & 4294967295) !== 0) || ((((_la - 131)) & ~0x1f) === 0 && ((1 << (_la - 131)) & 4294967295) !== 0) || _la===163) {
	            this.state = 65;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 45:
	                this.state = 58;
	                this.dosage();
	                break;
	            case 77:
	            case 78:
	            case 79:
	            case 80:
	            case 81:
	            case 82:
	            case 83:
	            case 84:
	            case 85:
	            case 86:
	            case 87:
	            case 88:
	            case 89:
	            case 90:
	            case 91:
	            case 92:
	            case 93:
	            case 94:
	            case 95:
	            case 96:
	            case 97:
	            case 98:
	            case 99:
	            case 100:
	            case 101:
	            case 102:
	            case 103:
	                this.state = 59;
	                this.frequency();
	                break;
	            case 46:
	            case 47:
	            case 48:
	            case 49:
	            case 50:
	            case 104:
	            case 105:
	            case 106:
	            case 107:
	                this.state = 60;
	                this.timing();
	                break;
	            case 36:
	            case 37:
	            case 38:
	            case 39:
	            case 40:
	            case 41:
	                this.state = 61;
	                this.duration();
	                break;
	            case 108:
	            case 109:
	            case 110:
	            case 111:
	            case 112:
	            case 113:
	            case 114:
	            case 115:
	            case 116:
	            case 117:
	            case 118:
	            case 119:
	            case 120:
	            case 121:
	            case 122:
	            case 123:
	            case 124:
	            case 125:
	            case 126:
	            case 127:
	            case 128:
	            case 129:
	            case 130:
	            case 131:
	            case 132:
	            case 133:
	            case 134:
	            case 135:
	            case 136:
	            case 137:
	            case 138:
	            case 139:
	            case 140:
	            case 141:
	                this.state = 62;
	                this.route();
	                break;
	            case 51:
	            case 52:
	            case 53:
	            case 54:
	            case 55:
	            case 56:
	            case 57:
	            case 58:
	            case 59:
	            case 60:
	            case 61:
	            case 62:
	            case 63:
	            case 64:
	            case 65:
	            case 66:
	            case 67:
	            case 68:
	            case 69:
	            case 70:
	            case 71:
	            case 73:
	            case 74:
	            case 75:
	            case 76:
	            case 142:
	            case 143:
	            case 144:
	            case 145:
	            case 146:
	            case 147:
	            case 148:
	            case 149:
	            case 150:
	            case 151:
	            case 152:
	            case 153:
	            case 154:
	            case 155:
	            case 156:
	            case 157:
	            case 158:
	            case 159:
	            case 160:
	            case 161:
	            case 162:
	            case 163:
	                this.state = 63;
	                this.site();
	                break;
	            case 35:
	                this.state = 64;
	                this.match(medicationsParser.WORD);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dosage() {
	    let localctx = new DosageContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, medicationsParser.RULE_dosage);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.match(medicationsParser.NUMBER);
	        this.state = 71;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1073741798) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	frequency() {
	    let localctx = new FrequencyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, medicationsParser.RULE_frequency);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        _la = this._input.LA(1);
	        if(!(((((_la - 77)) & ~0x1f) === 0 && ((1 << (_la - 77)) & 134217727) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timing() {
	    let localctx = new TimingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, medicationsParser.RULE_timing);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        _la = this._input.LA(1);
	        if(!(((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 31) !== 0) || ((((_la - 104)) & ~0x1f) === 0 && ((1 << (_la - 104)) & 15) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	duration() {
	    let localctx = new DurationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, medicationsParser.RULE_duration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        _la = this._input.LA(1);
	        if(!(((((_la - 36)) & ~0x1f) === 0 && ((1 << (_la - 36)) & 63) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	route() {
	    let localctx = new RouteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, medicationsParser.RULE_route);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        _la = this._input.LA(1);
	        if(!(((((_la - 108)) & ~0x1f) === 0 && ((1 << (_la - 108)) & 4294967295) !== 0) || _la===140 || _la===141)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


